[package]
name = "lapin"
version = "2.5.0"
edition = "2021"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>", "Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "AMQP client library"
repository = "https://github.com/amqp-rs/lapin"
readme = "README.md"
documentation = "https://docs.rs/lapin"
keywords = ["amqp", "rabbitmq", "mio", "futures"]
categories = ["database"]
license = "MIT"
build = "build.rs"
rust-version = "1.74.0"

[features]
default                   = ["rustls", "default-runtime"]
default-runtime           = ["dep:async-global-executor-trait", "dep:async-reactor-trait"]
codegen                   = ["codegen-internal", "amq-protocol/codegen"]
codegen-internal          = ["dep:amq-protocol-codegen", "dep:serde_json"]
native-tls                = ["amq-protocol/native-tls"]
openssl                   = ["amq-protocol/openssl"]
rustls                    = ["amq-protocol/rustls"]
rustls-native-certs       = ["amq-protocol/rustls-native-certs"]
rustls-webpki-roots-certs = ["amq-protocol/rustls-webpki-roots-certs"]
vendored-openssl          = ["amq-protocol/vendored-openssl"]

# rustls crypto providers. Choose at least one. Otherwise, runtime errors.
# See https://docs.rs/rustls/latest/rustls/#crate-features. for more info
rustls--aws_lc_rs         = ["amq-protocol/rustls--aws_lc_rs"] # default, but doesn't build everywhere
rustls--ring              = ["amq-protocol/rustls--ring"] # more compatible, (e.g., easily builds on Windows)

[build-dependencies.amq-protocol-codegen]
version = "=8.0.0-alpha.4"
optional = true

[build-dependencies.serde_json]
version = "^1.0"
optional = true

[dependencies.amq-protocol]
version = "=8.0.0-alpha.4"
default-features = false

[dependencies.async-global-executor-trait]
version = "^2.1"
features = ["async-io"]
optional = true

[dependencies.async-reactor-trait]
version = "=2.0.0-alpha.2"
optional = true

[dependencies.flume]
version = "^0.11"
default-features = false
features = ["async"]

[dependencies.serde]
version  = "^1.0"
features = ["derive"]

[dependencies.tracing]
version = "^0.1"
default-features = false

[dependencies]
async-trait = "^0.1.42"
executor-trait = "^2.1"
futures-core = "^0.3"
futures-io = "^0.3"
parking_lot = "^0.12"
reactor-trait = "=2.0.0-alpha.2"
waker-fn = "^1.1"

[dev-dependencies]
async-global-executor = "^2.0"
futures-lite = "^2.0"
serde_json = "^1.0"
waker-fn = "^1.1"
tokio-executor-trait = "^2.1"
tokio-reactor-trait = "=2.0.0-alpha.2"

[dev-dependencies.tokio]
version = "^1.17"
features = ["full"]

[dev-dependencies.tracing-subscriber]
version = "^0.3"
features = ["fmt"]

[[example]]
name = "custom_tls_connection"
required-features = ["native-tls"]

[badges]
maintenance = { status = "actively-developed" }
