[package]
name = "lapin-async-global-executor"
version = "0.4.0"
edition = "2018"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "lapin integration with async-global-executor"
repository = "https://github.com/CleverCloud/lapin"
readme = "README.md"
documentation = "https://docs.rs/lapin-async-global-executor"
keywords = ["amqp", "rabbitmq", "mio", "futures"]
categories = ["database"]
license = "MIT"

[features]
default = ["lapin/default", "async-io"]
async-io = ["async-global-executor/async-io", "async-lapin"]

[dependencies.async-global-executor]
version = "^1.0"
default-features = false

[dependencies.async-lapin]
version = "^0.4"
path = "../async-lapin"
default-features = false
optional = true

[dependencies.lapin]
version = "^1.2.3"
path = ".."
default-features = false

[dev-dependencies]
env_logger = "^0.7"
log = "^0.4"
