[package]
name = "lapin-async-global-executor"
version = "2.0.0"
edition = "2021"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "lapin integration with async-global-executor"
repository = "https://github.com/amqp-rs/lapin"
readme = "README.md"
documentation = "https://docs.rs/lapin-async-global-executor"
keywords = ["amqp", "rabbitmq", "mio", "futures"]
categories = ["database"]
license = "MIT"
rust-version = "1.56.0"

[features]
default = ["lapin/default", "async-io"]
async-io = ["async-global-executor-trait/async-io", "async-lapin"]

[dependencies.async-global-executor-trait]
version = "^2.0"
default-features = false

[dependencies.async-lapin]
version = "^1.1"
path = "../async-lapin"
default-features = false
optional = true

[dependencies.lapin]
version = "=2.0.0-beta.3"
path = ".."
default-features = false

[dev-dependencies]
async-global-executor = "^2.0"

[dev-dependencies.tracing]
version = "^0.1"
default-features = false

[dev-dependencies.tracing-subscriber]
version = "^0.3"
features = ["fmt"]

[badges]
maintenance = { status = "deprecated" }
