[package]
name = "async-lapin"
version = "1.1.0"
edition = "2018"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "lapin integration with async-io"
repository = "https://github.com/CleverCloud/lapin"
readme = "README.md"
documentation = "https://docs.rs/async-lapin"
keywords = ["amqp", "rabbitmq", "mio", "futures", "async-io"]
categories = ["database"]
license = "MIT"

[features]
default = ["lapin/default"]

[dependencies]
async-reactor-trait = "^0.2"

[dependencies.lapin]
version = "=2.0.0-alpha.2"
path = ".."
default-features = false

[dev-dependencies]
async-io = "^1.3"

[dev-dependencies.tracing]
version = "^0.1"
default-features = false

[dev-dependencies.tracing-subscriber]
version = "^0.2"
features = ["fmt"]
