[package]
name = "async-lapin"
version = "1.2.1"
edition = "2018"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "lapin integration with async-io"
repository = "https://github.com/CleverCloud/lapin"
readme = "README.md"
documentation = "https://docs.rs/async-lapin"
keywords = ["amqp", "rabbitmq", "mio", "futures", "async-io"]
categories = ["database"]
license = "MIT"

[features]
default = ["lapin/default"]

[dependencies]
async-io = "^1.2"
parking_lot = "^0.11"

[dependencies.lapin]
version = "^1.6"
path = ".."
default-features = false

[dev-dependencies]
async-global-executor = "^2.0"
env_logger = "^0.8"
log = "^0.4"
