[package]
name = "async-amqp"
version = "1.2.0"
edition = "2018"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "lapin integration with async-std"
repository = "https://github.com/CleverCloud/lapin"
readme = "README.md"
documentation = "https://docs.rs/async-amqp"
keywords = ["amqp", "async-std", "rabbitmq", "mio", "futures"]
categories = ["database"]
license = "MIT"

[features]
default = ["async-lapin/default"]

[dependencies.async-std]
version = "^1.9"
features = ["default"]

[dependencies.async-lapin]
version = "^1.2"
path = "../async-lapin"
default-features = false

[dependencies.lapin]
version = "^1.6"
path = ".."
default-features = false

[dev-dependencies]
env_logger = "^0.8"
log = "^0.4"

[dev-dependencies.async-std]
version = "^1.7"
features = ["attributes", "default", "unstable"]
