[package]
name = "async-amqp"
version = "1.2.0"
edition = "2018"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "lapin integration with async-std"
repository = "https://github.com/CleverCloud/lapin"
readme = "README.md"
documentation = "https://docs.rs/async-amqp"
keywords = ["amqp", "async-std", "rabbitmq", "mio", "futures"]
categories = ["database"]
license = "MIT"

[features]
default = ["async-lapin/default"]

[dependencies]
async-executor-trait = "^2.0"

[dependencies.async-lapin]
version = "^1.2"
path = "../async-lapin"
default-features = false

[dependencies.lapin]
version = "=2.0.0-alpha.3"
path = ".."
default-features = false

[dev-dependencies.async-std]
version = "^1.8"
features = ["attributes", "default", "unstable"]

[dev-dependencies.tracing]
version = "^0.1"
default-features = false

[dev-dependencies.tracing-subscriber]
version = "^0.2"
features = ["fmt"]
