[package]
name = "async-amqp"
version = "2.0.0"
edition = "2021"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "lapin integration with async-std"
repository = "https://github.com/amqp-rs/lapin"
readme = "README.md"
documentation = "https://docs.rs/async-amqp"
keywords = ["amqp", "async-std", "rabbitmq", "mio", "futures"]
categories = ["database"]
license = "MIT"
rust-version = "1.56.0"

[features]
default = ["async-lapin/default"]

[dependencies]
async-executor-trait = "^2.1"

[dependencies.async-lapin]
version = "^2.0"
path = "../async-lapin"
default-features = false

[dependencies.lapin]
version = "^2.0"
path = ".."
default-features = false

[dev-dependencies.async-std]
version = "^1.8"
features = ["attributes", "default", "unstable"]

[dev-dependencies.tracing]
version = "^0.1"
default-features = false

[dev-dependencies.tracing-subscriber]
version = "^0.3"
features = ["fmt"]

[badges]
maintenance = { status = "deprecated" }
