[package]
name = "lapin-async"
version = "0.19.0-alpha1"
edition = "2018"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>", "Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "AMQP client library with a low level API designed for use with mio"
repository = "https://github.com/sozu-proxy/lapin"
readme = "README.md"
documentation = "https://docs.rs/lapin-async"
keywords = ["amqp", "rabbitmq", "mio"]
categories = ["database"]
license = "MIT"
build = "build.rs"

[build-dependencies]
amq-protocol = "=2.0.0-beta1"
serde_json = "^1.0"

[dependencies]
amq-protocol = "=2.0.0-beta1"
crossbeam-channel = "^0.3"
failure = "^0.1"
log = "^0.4"
parking_lot = '^0.7'

[dev-dependencies]
env_logger = "^0.6"
