[package]
name = "lapin-async"
version = "0.22.0"
edition = "2018"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>", "Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "AMQP client library with a low level API designed for use with mio"
repository = "https://github.com/sozu-proxy/lapin"
readme = "README.md"
documentation = "https://docs.rs/lapin-async"
keywords = ["amqp", "rabbitmq", "mio"]
categories = ["database"]
license = "MIT"
build = "build.rs"

[features]
default    = ["native-tls"]
native-tls = ["amq-protocol/native-tls"]
openssl    = ["amq-protocol/openssl"]
rustls     = ["amq-protocol/rustls"]
tokio      = ["amq-protocol/tokio"]

[build-dependencies]
amq-protocol-codegen = "^2.0.2"
serde_json = "^1.0"

[dependencies.amq-protocol]
version = "^2.0.2"
default-features = false

[dependencies]
failure = "^0.1"
log = "^0.4"
mio = "^0.6"
parking_lot = '^0.8'

[dev-dependencies]
env_logger = "^0.6"
