[package]
name = "bastion-amqp"
version = "0.2.1"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
edition = "2018"
description = "lapin integration with bastion"
repository = "https://github.com/CleverCloud/lapin"
readme = "README.md"
documentation = "https://docs.rs/bastion-amqp"
keywords = ["amqp", "rabbitmq", "futures", "bastion"]
categories = ["database"]
license = "MIT"

[features]
default = ["lapin/default"]

[dependencies.lapin]
version = "^1.4.2"
path = ".."
default-features = false

[dependencies]
bastion-executor = "^0.4"

[dev-dependencies]
bastion = "^0.4"
env_logger = "^0.8"
log = "^0.4"
