[package]
name = "bastion-amqp"
version = "0.2.3"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
edition = "2018"
description = "lapin integration with bastion"
repository = "https://github.com/CleverCloud/lapin"
readme = "README.md"
documentation = "https://docs.rs/bastion-amqp"
keywords = ["amqp", "rabbitmq", "futures", "bastion"]
categories = ["database"]
license = "MIT"

[features]
default = ["lapin/default"]

[dependencies]
bastion-executor-trait = "^0.5"

[dependencies.lapin]
version = "=2.0.0-beta.2"
path = ".."
default-features = false

[dev-dependencies]
bastion = "^0.4"

[dev-dependencies.tracing]
version = "^0.1"
default-features = false

[dev-dependencies.tracing-subscriber]
version = "^0.3"
features = ["fmt"]
