[package]
name = "lapin-futures"
version = "0.26.5"
edition = "2018"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>", "Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
repository = "https://github.com/sozu-proxy/lapin"
readme = "README.md"
documentation = "https://docs.rs/lapin-futures"
description = "AMQP client library with a futures based API"
keywords = ["amqp", "rabbitmq", "futures", "tokio"]
categories = ["database"]
license = "MIT"

[features]
default    = ["native-tls"]
native-tls = ["lapin/native-tls"]
openssl    = ["lapin/openssl"]
rustls     = ["lapin/rustls"]

[dependencies.lapin]
version = "^0.26.5"
default-features = false
path = ".."

[dependencies]
futures = "^0.1"
log = "^0.4"

[dev-dependencies]
env_logger = "^0.6"
failure = "^0.1"
tokio = "^0.1.8"
