[package]
name = "lapinou"
version = "1.1.0"
edition = "2018"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "lapin integration with smol"
repository = "https://github.com/CleverCloud/lapin"
readme = "README.md"
documentation = "https://docs.rs/lapinou"
keywords = ["amqp", "rabbitmq", "mio", "futures", "smol"]
categories = ["database"]
license = "MIT"

[features]
default = ["async-lapin/default"]

[dependencies]
smol-executor-trait = "^2.0"

[dependencies.async-lapin]
version = "^1.1"
path = "../async-lapin"
default-features = false

[dependencies.lapin]
version = "=2.0.0-alpha.1"
path = ".."
default-features = false

[dev-dependencies]
smol = "^1.0"

[dev-dependencies.tracing]
version = "^0.1"
default-features = false

[dev-dependencies.tracing-subscriber]
version = "^0.2"
features = ["fmt"]
