[package]
name = "lapin"
version = "0.0.0"
edition = "2018"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>", "Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "AMQP client library"
repository = "https://github.com/sozu-proxy/lapin"
readme = "README.md"
documentation = "https://docs.rs/lapin"
keywords = ["amqp", "rabbitmq", "mio", "futures", "tokio"]
categories = ["database"]
license = "MIT"
