[package]
name = "tokio-amqp"
version = "1.0.0"
edition = "2018"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "lapin integration with tokio"
repository = "https://github.com/CleverCloud/lapin"
readme = "README.md"
documentation = "https://docs.rs/tokio-amqp"
keywords = ["amqp", "rabbitmq", "mio", "futures", "tokio"]
categories = ["database"]
license = "MIT"

[features]
default = ["lapin/default"]

[dependencies.lapin]
version = "^1.6"
path = ".."
default-features = false

[dependencies.tokio]
version = "^1.0"
default-features = false
features = ["net", "rt", "time"]

[dependencies]
parking_lot = "^0.11"

[dev-dependencies]
env_logger = "^0.8"
log = "^0.4"

[dev-dependencies.tokio]
version = "^1.0"
default-features = false
features = ["macros", "net", "rt", "rt-multi-thread", "time"]
