[package]
name = "tokio-amqp"
version = "1.0.0"
edition = "2018"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "lapin integration with tokio"
repository = "https://github.com/CleverCloud/lapin"
readme = "README.md"
documentation = "https://docs.rs/tokio-amqp"
keywords = ["amqp", "rabbitmq", "mio", "futures", "tokio"]
categories = ["database"]
license = "MIT"

[features]
default = ["lapin/default"]

[dependencies]
tokio-executor-trait = "^2.0"
tokio-reactor-trait = "^0.2"

[dependencies.lapin]
version = "=2.0.0-alpha.3"
path = ".."
default-features = false

[dev-dependencies.tokio]
version = "^1.0"
default-features = false
features = ["macros"]

[dev-dependencies.tracing]
version = "^0.1"
default-features = false

[dev-dependencies.tracing-subscriber]
version = "^0.2"
features = ["fmt"]
