[package]
name = "tokio-amqp"
version = "1.0.1"
edition = "2021"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "lapin integration with tokio"
repository = "https://github.com/amqp-rs/lapin"
readme = "README.md"
documentation = "https://docs.rs/tokio-amqp"
keywords = ["amqp", "rabbitmq", "mio", "futures", "tokio"]
categories = ["database"]
license = "MIT"
rust-version = "1.56.0"

[features]
default = ["lapin/default"]

[dependencies]
tokio-executor-trait = "^2.0"
tokio-reactor-trait = "^1.0"

[dependencies.lapin]
version = "=2.0.0-beta.2"
path = ".."
default-features = false

[dev-dependencies.tokio]
version = "^1.0"
default-features = false
features = ["macros"]

[dev-dependencies.tracing]
version = "^0.1"
default-features = false

[dev-dependencies.tracing-subscriber]
version = "^0.3"
features = ["fmt"]

[badges]
maintenance = { status = "deprecated" }
